my_styles.css
/*
* @Author: Theo Lemaire
* @Date:   2017-08-17 19:07:50
* @Last Modified by:   Theo Lemaire
* @Last Modified time: 2018-01-22 16:35:20
*/


/* Body
-----------------------------------------*/

body {
	background-color: rgb(250, 250, 250);
}

p {
	text-align: justify;
	text-justify: inter-word;
}

/* Header & Footer
-----------------------------------------*/

#header {
	width: 100%;
	margin: 0;
}

#header-middle {
	display: inline-block;
	width: calc(100% - 24em);
    text-align: center;
}

.header-side {
	display: inline-block;
	width: 10em;
	height: 100%;
}

#header-left {
	float: left;
}

#header-right {
	float: right;
}

.header-txt {
	margin-top: 0;
    margin-bottom: 0;
}

.logo {
	/*width: 100%;*/
	height: 6em;
	margin: 0 auto;
}


#main-logo {
	height: 5em;
}

#footer {
	width: 100%;
	margin: 0;
	text-align: center;
}

.separator {
	width: 100%;
	padding: 1px 1px;
	margin: 0;
}


/* Container
-----------------------------------------*/

#container {
	margin: 0 auto;
	padding: 0;
	width: 100%;
	overflow-x: hidden;
}

.grid-div {
    float: left;
    width: 100%;
    padding: 0;
}

@media (min-width:60em){
    #left-div {
    	width: 35em;
    }
    #right-div {
    	width: calc(100% - 35em);
    }
}

@media (min-width:100em){
    #container {
    	padding-left: 10em;
    	padding-right: 10em;
    }
}



/* Panel
-----------------------------------------*/

.panel {
	padding: 0 2em 1em 1em;
	margin: 1em;
	background-color: white;
    box-shadow: 2px 2px 5px #888888;
}


summary {
	outline: none;
	cursor: pointer;
}

.panel-title {
	font-size: 2.2rem;
	line-height: 1.5;
	letter-spacing: -.05rem;
	margin-bottom: 0.6rem;
	margin-top: 0.6rem;
	/*outline: none;*/
}

#output-panel-title {
	text-align: center;
}


/* Graph
-----------------------------------------*/

.graph-div {
    width: 100%;
}

.graph-separator {
	width: 100%;
    border: none;
	height: 2px;
    color: #bfbfbf;
    background-color: #bfbfbf;
    /*display: inline-block;*/
}


#download-wrapper {
	text-align: center;
	width: 100%;
}



/* Table
-----------------------------------------*/

.table {
	width: 100%;
	text-align: center;
}

.slider-row {
	height: 4em;
}


.input-row {
	height: 4em;
}

.input-box {
	width: 10em;
}

.input-div {
	text-align: center;
}

.submit-button {
	margin-top: 1em;
}


/* Loading callback
-----------------------------------------*/

@keyframes fadein {
	0% {opacity: 0;}
	100% {opacity: 0.5;}
}

._dash-loading-callback {

	/* Banner */
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 200%;
	text-align: center;
	cursor: progress;
	background-color: rgb(250, 250, 250);
	opacity: 0;

	/* Delay animation by 1s to prevent flashing and smoothly transition the animation over 0.5s */
	-moz-animation: fadein 0.5s ease-in 1s forwards; /* Firefox */
	-webkit-animation: fadein 0.5s ease-in 1s forwards; /* Safari and Chrome */
	-o-animation: fadein 0.5s ease-in 1s forwards; /* Opera */
	animation: fadein 0.5s ease-in 1s forwards;
}

